Fixed letter text alignment and image size

--- a/style.css
+++ b/style.css
@@ -95,7 +95,6 @@ body {
     border-radius: 50%;
     background-color: rgba(0, 0, 0, 0.3);
     top: 280px; /* Adjusted for better alignment */
-    left: 0;
     animation: scale 3s linear infinite;
     z-index: -1;
 }
